fix heading on small screens

--- a/src/assets/drizzle/styles/objects/_main-layout.scss
+++ b/src/assets/drizzle/styles/objects/_main-layout.scss
@@ -44,7 +44,7 @@
 
 .#{$app-namespace}-o-Layout__header {
   background-color: $highlight;
-  padding: 90px 0 1.8rem 2rem;
+  padding: 6.0625rem 1rem 1rem 2rem;
   width: 100%;
 
   @media (min-width: $nav-switch-breakpoint) {
